# strategy

./: .gitignore  README.md  backtest.ipynb  backtest_process.ipynb  bot.js  fetch_FED_data.py  fetch_polygon_data.py  fetch_pyth_data.py  generateWallet.js  package.json  pyproject.toml  requirements.txt  strategy.tex
