[project]
name = "strategy"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.0.0,<2.9.0",
    "intel-extension-for-pytorch>=2.4.0",
    "markupsafe>=2.1.0,!=3.0.2",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv.sources]
torch = { index = "torch-xpu" }
torchvision = { index = "torch-xpu" }
torchaudio = { index = "torch-xpu" }

[[tool.uv.index]]
name = "torch-xpu"
url = "https://download.pytorch.org/whl/xpu"
